update controller + service v1

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,12 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<div style="background: url(/img/404pic.jpg); 
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 92%">
+    <div class="container">
+        <h1 class="text-white">404</h1>
+        <h3 class="text-white">Ối!! Bạn đi lạc à?</h3>
+        &nbsp;
+        <a href="/"><button class="btn btn-success mt-5">Đưa tôi về trang chủ</button></a>
+    </div>
+</div>
