--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -9,22 +9,22 @@
             <i class="sidebar-icon fas fa-bars toggle-btn"></i>
         </li>
         <div class="sidebar-options">
-            <li class="sidebar-tab active">
-                <a href="#">
-                    <i class="sidebar-icon fas fa-th-large"></i>
+            <li class="sidebar-tab active" id="sidebar-tag__home">
+                <a href="/">
+                    <i class="sidebar-icon fas fa-home"></i>
                     <span class="links-name label">Trang chủ</span>
                 </a>
             </li>
-            <li class="sidebar-tab">
-                <a href="#">
+            <li class="sidebar-tab" id="sidebar-tag__team">
+                <a href="/team">
                     <i class="sidebar-icon fas fa-users"></i>
                     <span class="links-name label">Các đội</span>
                 </a>
             </li>
-            <li class="sidebar-tab">
-                <a href="#">
-                    <i class="sidebar-icon fas fa-chart-bar"></i>
-                    <span class="links-name label">Biểu đồ</span>
+            <li class="sidebar-tab" id="sidebar-tag__schedule">
+                <a href="/schedule">
+                    <i class="sidebar-icon fas fa-table"></i>
+                    <span class="links-name label">Lịch thi đấu</span>
                 </a>
             </li>
         </div>
