--- a/views/team.hbs
+++ b/views/team.hbs
@@ -112,3 +112,11 @@
     </div>
     <!-- /Tourmanents -->
 </body>
+<script src="js/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#sidebar-tag__home').classList.remove('active');
+        $('#sidebar-tag__team').classList.add('active');
+        $('#sidebar-tag__schedule').classList.remove('active');
+    });
+</script>
