--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -11,16 +11,16 @@
                     <a class="nav-link label" href="/tournament">Giải đấu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link label" href="#">Highlights</a>
+                    <a class="nav-link label" href="/result">Kết quả</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link label" href="#">Quy tắc</a>
+                    <a class="nav-link label" href="/rule">Quy tắc</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link label" href="/about">Về trang web</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link label disabled">Phân tích</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link label" href="#">Về trang web</a>
                 </li>
             </ul>
             <ul class="navbar-nav nav-item dropdown ms-auto text-center">
