--- a/views/layouts/registerLayout.hbs
+++ b/views/layouts/registerLayout.hbs
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport Events Manager</title>
-    
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font Icon -->
     <link rel="stylesheet" href="/font/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="/js/vendor/nouislider/nouislider.min.css">
@@ -25,6 +27,7 @@
     <script src="/js/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="/js/vendor/jquery-validation/dist/additional-methods.min.js"></script>
     <script src="/js/register.js"></script>
+    {{{_sections.script}}}
 </body>
 
 </html>
