--- a/views/error.hbs
+++ b/views/error.hbs
@@ -10,3 +10,7 @@
         <a href="/"><button class="btn btn-success mt-5">Đưa tôi về trang chủ</button></a>
     </div>
 </div>
+
+{{!-- <h1>{{message}}</h1>
+<h2>{{error.status}}</h2>
+<pre>{{error.stack}}</pre> --}}
