--- a/views/result.hbs
+++ b/views/result.hbs
@@ -27,6 +27,7 @@
 
     <div>
         <div class="row g-3">
+            {{#each teamArr}}
             <div class="col-xl-6 col-md-12">
                 <div class="result-tab d-flex">
                     <div class="result-tab__teams flex-grow-1">
@@ -34,16 +35,16 @@
                         <div class="result-tab__team d-flex">
                             <div class="result-tab__team-name mb-3 d-flex flex-grow-1">
                                 <img src="/img/logo1.png" alt="">
-                                <p>Đội 1</p>
+                                <p>Đội {{this.team1.TenDB}}</p>
                             </div>
-                            <span class="result-tab__team-score team-score-top win">2</span>
+                            <span class="result-tab__team-score team-score-top win">{{this.team1.Diem}}</span>
                         </div>
                         <div class="result-tab__team d-flex">
                             <div class="result-tab__team-name mb-3 d-flex flex-grow-1">
                                 <img src="/img/logo2.png" alt="">
-                                <p>Đội 2</p>
+                                <p>Đội {{this.team2.TenDB}}</p>
                             </div>
-                            <span class="result-tab__team-score team-score-bottom lose">1</span>
+                            <span class="result-tab__team-score team-score-bottom lose">{{this.team2.Diem}}</span>
                         </div>
                     </div>
                     <span class="devide-line"></span>
@@ -59,38 +60,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6 col-md-12">
-                <div class="result-tab d-flex">
-                    <div class="result-tab__teams flex-grow-1">
-                        <p>Trận bán kết</p>
-                        <div class="result-tab__team d-flex">
-                            <div class="result-tab__team-name mb-3 d-flex flex-grow-1">
-                                <img src="/img/logo1.png" alt="">
-                                <p>Đội 1</p>
-                            </div>
-                            <span class="result-tab__team-score team-score-top win">2</span>
-                        </div>
-                        <div class="result-tab__team d-flex">
-                            <div class="result-tab__team-name mb-3 d-flex flex-grow-1">
-                                <img src="/img/logo2.png" alt="">
-                                <p>Đội 2</p>
-                            </div>
-                            <span class="result-tab__team-score team-score-bottom lose">1</span>
-                        </div>
-                    </div>
-                    <span class="devide-line"></span>
-                    <div class="result-tab__record">
-                        <p class="mb-0">Kết thúc ngày</p>
-                        <p>12/12/2020</p>
-                        <div class="result-tab__record-video">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/x2H4RBnl3BI"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {{/each}}
         </div>
     </div>
 </div>
