--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/tabs.css">
     <link rel="stylesheet" href="/css/calendar.css">
     <link rel="stylesheet" href="/css/schedule.css">
+    <link rel="stylesheet" href="/css/result.css">
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
