--- a/views/register.hbs
+++ b/views/register.hbs
@@ -11,7 +11,7 @@
             </div>
             <div class="signup-form">
                 <form action="/register" method="POST" class="register-form" id="register-form">
-                    <div class="form-row">
+                    <div class="form-row row justify-content-center">
                         <div class="form-group">
                             <div class="form-input">
                                 <label for="name" class="required">Họ và tên</label>
@@ -37,67 +37,9 @@
                                 <input type="text" name="phone_number" id="phone_number" />
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="form-select">
-                                <div class="label-flex">
-                                    <label for="meal_preference">Chọn màu áo</label>
-                                    <a href="#" class="form-link">Xem thêm về quy định</a>
-                                </div>
-                                <div class="select-list">
-                                    <select name="meal_preference" id="meal_preference">
-                                        <option value="Red">Đen</option>
-                                        <option value="Red">Trắng</option>
-                                        <option value="Red">Bạc</option>
-                                        <option value="Red">Đỏ</option>
-                                        <option value="Red">Cam</option>
-                                        <option value="Red">Vàng</option>
-                                        <option value="Red">Xanh lá</option>
-                                        <option value="Red">Xanh dương</option>
-                                        <option value="Red">Tím</option>
-                                        <option value="Red">Hồng</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-radio">
-                                <div class="label-flex">
-                                    <label for="payment">Phương thức thanh toán</label>
-                                    <a href="#" class="form-link">Chi tiết thanh toán</a>
-                                </div>
-                                <div class="form-radio-group">
-                                    <div class="form-radio-item">
-                                        <input type="radio" name="payment" id="cash" checked>
-                                        <label for="cash">Tiền mặt</label>
-                                        <span class="check"></span>
-                                    </div>
-                                    <div class="form-radio-item">
-                                        <input type="radio" name="payment" id="cheque">
-                                        <label for="cheque">Séc</label>
-                                        <span class="check"></span>
-                                    </div>
-                                    <div class="form-radio-item">
-                                        <input type="radio" name="payment" id="transfer">
-                                        <label for="transfer">Chuyển khoản</label>
-                                        <span class="check"></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-input">
-                                <label for="chequeno">DD / Mã Séc.</label>
-                                <input type="text" name="chequeno" id="chequeno" />
-                            </div>
-                            <div class="form-input">
-                                <label for="blank_name">Tên ngân hàng</label>
-                                <input type="text" name="blank_name" id="blank_name" />
-                            </div>
-                            <!-- <div class="form-input">
-                                    <label for="payable">Payable at</label>
-                                    <input type="text" name="payable" id="payable" />
-                                </div> -->
-
-                        </div>
                     </div>
-                    <div class="form-submit">
-                        <input type="submit" value="Tiếp tục đăng ký thành viên" class="submit" id="submit"
+                    <div class="form-submit row justify-content-center">
+                        <input type="submit" value="Đăng ký" class="submit" id="submit"
                             name="submit" />
                         <!-- <input type="submit" value="Reset" class="submit" id="reset" name="reset" /> -->
                     </div>
