--- a/views/register-members.hbs
+++ b/views/register-members.hbs
@@ -29,7 +29,7 @@
                     <th>Ngày sinh</th>
                     <th>Chiều cao</th>
                     <th>Cân nặng</th>
-                    <th>Hành động</th>
+                    <th>Tổng bàn thắng</th>
                 </tr>
             </thead>
             <tbody>
