--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -1,14 +1,216 @@
-<div id="scheduler_here" class="dhx_cal_container container" style='width:100%; height:92%;'>
-    <div class="dhx_cal_navline">
-        <div class="dhx_cal_prev_button">&nbsp;</div>
-        <div class="dhx_cal_next_button">&nbsp;</div>
-        <div class="dhx_cal_today_button"></div>
-        <div class="dhx_cal_date"></div>
-        <div class="dhx_cal_tab" name="day_tab"></div>
-        <div class="dhx_cal_tab" name="week_tab"></div>
-        <div class="dhx_cal_tab" name="month_tab"></div>
+<div class="container">
+    <div class="filter-tag d-flex flex-wrap align-items-baseline">
+        <p class="label">Tìm kiếm đội thi đấu</p>
+        <div class="search-bar flex-grow-1">
+            <input class="form-control search-box-schedule" type="search" placeholder="Tìm kiếm..." aria-label="Search">
+        </div>
+        <a href="schedule/generate" class="btn btn-success btn-schedule-generator" type="submit">Xếp lịch tự động</a>
     </div>
-    <div class="dhx_cal_header"></div>
-    <div class="dhx_cal_data"></div>
+    <p>*Lưu ý: tuyệt đối không chọn lại "Xếp lịch tự động" khi hệ thống đã xếp lịch xong, để tránh lỗi database.</p>
+    <p>Vui lòng xóa hết lịch hiện tại trước khi chọn "Xếp lịch tự động"</p>
+
+    <div class="container">
+        <div class="table-wrapper">
+            <div class="table-title">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h4>Lịch thi đấu</h4>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="#deleteAllMembersModal" class="btn btn-danger btn-delete-members"
+                            data-toggle="modal"><i class="fas fa-minus-circle"></i><span>Xóa tất cả</span></a>
+                    </div>
+                </div>
+            </div>
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>
+                            <span class="custom-checkbox">
+                                <input type="checkbox" id="selectAll">
+                                <label for="selectAll"></label>
+                            </span>
+                        </th>
+                        <th>Mã Trận đấu</th>
+                        <th>Mã Đội 1</th>
+                        <th>Mã đội 2</th>
+                        <th>Mã Vòng đấu</th>
+                        <th>Mã Sẫn đấu</th>
+                        <th>Giờ bắt đầu</th>
+                        <th>Ngày thi đấu</th>
+                        <th>Tỷ số</th>
+                        <th>Đội thắng</th>
+                        <th>Hành động</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each matches}}
+                    <tr>
+                        <td>
+                            <span class="custom-checkbox">
+                                <input type="checkbox" id="checkbox1" name="options[]" value="1">
+                                <label for="checkbox1"></label>
+                            </span>
+                        </td>
+                        <td>{{this.MaTD}}</td>
+                        <td>{{this.MaDB1}}</td>
+                        <td>{{this.MaDB2}}</td>
+                        <td>{{this.MaVD}}</td>
+                        <td>{{this.MaSD}}</td>
+                        <td>{{this.GioBatDau}}</td>
+                        <td>{{this.NgThiDau}}</td>
+                        <td>{{this.TySo}}</td>
+                        <td>{{this.DoiThang}}</td>
+                        <td>
+                            <a href="#editMemberModal" class="edit" data-toggle="modal"><i
+                                    class="fas fa-pencil-alt"></i></a>
+                            <a href="#deleteMemberModal" class="delete" data-toggle="modal"><i
+                                    class="fas fa-trash"></i></a>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <!-- Edit Modal HTML -->
+    <div id="addMemberModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h4 class="modal-title">Thêm thành viên mới</h5>
+                            <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label>Họ và tên</label>
+                            <input type="text" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Số áo</label>
+                            <input type="number" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Ngày sinh</label>
+                            <input type="date" class="form-control" required>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 form-group">
+                                <label>Chiều cao</label>
+                                <input type="number" class="form-control" required>
+                            </div>
+                            <div class="col-6 form-group">
+                                <label>Cân nặng</label>
+                                <input type="number" class="form-control" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
+                        <input type="submit" class="btn btn-success" value="Thêm">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Edit Modal HTML -->
+    <div id="editMemberModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h4 class="modal-title">Chỉnh sửa thông tin</h4>
+                        <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label>Họ và tên</label>
+                            <input type="text" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Số áo</label>
+                            <input type="number" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Ngày sinh</label>
+                            <input type="date" class="form-control" required>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 form-group">
+                                <label>Chiều cao</label>
+                                <input type="number" class="form-control" required>
+                            </div>
+                            <div class="col-6 form-group">
+                                <label>Cân nặng</label>
+                                <input type="number" class="form-control" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
+                        <input type="submit" class="btn btn-success" value="Lưu thay đổi">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Delete Modal HTML -->
+    <div id="deleteMemberModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h4 class="modal-title">Xóa thành viên này?</h4>
+                        <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Bạn chắc chắn xóa thành viên này khỏi đội?</p>
+                        <p class="text-warning"><small>Hành động này sẽ không được phục hồi!</small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
+                        <input type="submit" class="btn btn-danger" value="Xóa">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div id="deleteAllMembersModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h4 class="modal-title">Xóa tất cả thành viên?</h4>
+                        <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Bạn chắc chắn xóa tất cả thành viên khỏi đội?</p>
+                        <p class="text-warning"><small>Hành động này sẽ không được phục hồi!</small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
+                        <input type="submit" class="btn btn-danger" value="Xóa">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="./assets/js/add-member.js"></script>
 </div>
+
 <script src="/js/schedule.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#sidebar-tag__home').classList.remove('active');
+        $('#sidebar-tag__team').classList.remove('active');
+        $('#sidebar-tag__schedule').classList.add('active');
+    });
+</script>
