--- a/views/team-detail.hbs
+++ b/views/team-detail.hbs
@@ -89,7 +89,7 @@
                                 </p>
                             </div>
                             <h1 class="team-member__shirtnum">
-                                {{this.SoAo}}
+                                {{this.SoAoCT}}
                             </h1>
                         </div>
                     </div>
