--- a/views/register-members.hbs
+++ b/views/register-members.hbs
@@ -91,7 +91,7 @@
                     <div class="row">
                         <div class="col-6 form-group">
                             <label>Chiều cao</label>
-                            <input name="height" type="number" class="form-control" required>
+                            <input name="height" type="number" step="0.01" class="form-control" required>
                         </div>
                         <div class="col-6 form-group">
                             <label>Cân nặng</label>
