update edit Players

--- a/views/register-members.hbs
+++ b/views/register-members.hbs
@@ -43,7 +43,7 @@
                     </td>
                     <td>{{MaCT}}</td>
                     <td>{{TenCT}}</td>
-                    <td>{{SoAo}}</td>
+                    <td>{{SoAoCT}}</td>
                     <td>{{ViTri}}</td>
                     <td>{{NgSinhCT}}</td>
                     <td>{{ChieuCaoCT}}</td>
@@ -51,7 +51,7 @@
                     <td>{{TongBT}}</td>
 
                     <td>
-                        <a href="#editMemberModal" class="edit" data-toggle="modal"><i
+                        <a href="/register/members/{{MaCT}}/edit" class="edit"><i
                                 class="fas fa-pencil-alt"></i></a>
                         <a href="#deleteMemberModal" class="delete" data-toggle="modal"><i class="fas fa-trash"></i></a>
                     </td>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="form-group">
                         <label>Số áo</label>
-                        <input name="playerNumber"  type="number" class="form-control" required>
+                        <input name="playerNumber"  type="text" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>Vị trí</label>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="form-group">
                         <label>Số áo</label>
-                        <input type="number" class="form-control" required>
+                        <input type="text" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>Ngày sinh</label>
