--- a/views/score.hbs
+++ b/views/score.hbs
@@ -107,7 +107,7 @@
                                 </div> -->
                         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                             <li class="nav-item tab-title" role="presentation">
-                                <button class="score-note nav-link active" id="pills-team-score-tab"
+                                <button class="score-note nav-link" id="pills-team-score-tab"
                                     data-bs-toggle="pill" data-bs-target="#pills-team-score" type="button" role="tab"
                                     aria-selected="true">Ghi điểm</button>
                             </li>
@@ -123,7 +123,7 @@
                             </li>
                         </ul>
                         <div class="tab-content" id="pills-tabContent">
-                            <div class="tab-pane fade show active" id="pills-team-score" role="tabpanel">
+                            <div class="tab-pane fade " id="pills-team-score" role="tabpanel">
                                 <div class="team-score d-flex mb-3">
                                     <div class="team-score__left me-5">
                                         <p class="team-score__left-name mb-1">ĐH NN&CN VN</p>
